se solucionó lo del footer

--- a/estilo.css
+++ b/estilo.css
@@ -154,7 +154,7 @@ a i {
     text-align: justify;
     color: white;
     text-align: center;
-=======
+}
 .imagen {
     /* margin: 0% 37%; */
     position: relative;
