--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,9 @@
-    body {
+* {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+
+body {
     margin: 0px;
 }
 
@@ -167,10 +172,8 @@ a i {
 
 /* -------- PERFILES ------------------------------- */
 
-* {
-    box-sizing: border-box;
-  }
-.contanier.perfiles {
+
+.contanier{
     height: 100%;
     width: 100%;
     display: flex;
