--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
-* {
+/* * {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-  }
+  } */
 
 body {
     margin: 0px;
@@ -173,7 +173,15 @@ a i {
 /* -------- PERFILES ------------------------------- */
 
 
-.contanier{
+*
+{
+    box-sizing: border-box;
+}
+
+
+
+.container
+{
     height: 100%;
     width: 100%;
     display: flex;
@@ -206,24 +214,14 @@ a i {
     text-align: justify;
     color: white;
 }
-.imagen {
-    /* margin: 0% 37%; */
-    position: relative;
-    overflow: hidden;
-    width: 10%;
-    height: 10%;
-    padding: 15px;
-    border-radius: 10px;
-    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.5);
-    margin: 20px;
-}
 
 .sub-head
 {
     text-align: justify;
-
     color: rgb(0, 225, 255);
 }
+
+
 
 /* ------ FOOTER ---------------------------------- */
 
