--- a/estilo.css
+++ b/estilo.css
@@ -11,10 +11,11 @@ body {
 /* ---- HEADER o ENCABEZADO -------------------- */
 
 .encabezado {
-    width: 96.2%;
+    width: 97.6%;
     padding: 10px;
     background: #0D1B2A;
     margin: 5px auto;
+    margin-bottom: 0;
     display: flex;
     justify-content: start;
     align-items: center;
