--- a/estilo.css
+++ b/estilo.css
@@ -1,20 +1,20 @@
-/* * {
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  } */
+*{
+    padding: 0;
+    margin: 0;
+}
+
 
 body {
-    margin: 0px;
+     margin: 0px;
 }
 
 
 /* ---- HEADER o ENCABEZADO -------------------- */
 
 .encabezado {
-    width: 97.75%;
     padding: 10px;
     background: #0D1B2A;
-    margin: 5px auto;
+    margin: 0 15px;
     margin-bottom: 0;
     display: flex;
     justify-content: start;
@@ -123,7 +123,7 @@ a {
 }
 
 .sub-centrado a.izquierda.margen {
-    margin-right: 80px;
+    margin-right: 95px;
 }
 
 .sub-centrado a.izquierda:hover {
@@ -143,7 +143,7 @@ a {
 }
 
 .sub-centrado a.izquierda.margen {
-    margin-right: 95px;
+    margin-right: 92px;
 }
 
 .sub-centrado a.izquierda:hover {
@@ -173,10 +173,6 @@ a i {
 
 /* -------- PERFILES ------------------------------- */
 
-* {
-    box-sizing: border-box;
-}
-
 .container {
     height: 100%;
     width: 100%;
@@ -205,88 +201,15 @@ a i {
     margin: 10px;
 }
 
-.description {
-    text-align: justify;
-    color: white;
-}
-
-.sub-head {
-    text-align: justify;
-    color: rgb(0, 225, 255);
-}
-
-
-/* ------ FOOTER ---------------------------------- */
-
-footer {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    height: 100%;
-    background-color: #0D1B2A;
-    color: white;
-    border: 1px solid red;
-}
-
-.brain {
-    border: 1px solid greenyellow;
-}
-
-.foodtxt {
-    border: 1px solid darkmagenta;
-}
-
-.iconos {
-    border: 1px solid gold;
-}
-
-
-/* -------- PERFILES ------------------------------- */
-
-.contanier.perfiles {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-flow: wrap row;
-    align-items: center;
-    padding: 30px;
-    cursor: default;
-}
-
-.card {
-    position: relative;
-    overflow: hidden;
-    width: 23%;
-    height: 480px;
-    padding: 15px;
-    border-radius: 20px;
-    background-image: linear-gradient(135deg, #000000 10%, #1B263A 100%);
-    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.5);
-    transform-style: preserve-3d;
-    transform: perspective(1000);
-    display: flex;
-    flex-flow: column;
-    justify-content: space-around;
-    align-items: center;
-    margin: 10px;
+img .shoe{
+    margin-top: 0;
+    margin-bottom: 20px;
 }
 
 .description {
     text-align: justify;
     color: white;
-    text-align: center;
-}
-
-.imagen {
-    /* margin: 0% 37%; */
-    position: relative;
-    overflow: hidden;
-    width: 10%;
-    height: 10%;
-    padding: 15px;
-    border-radius: 10px;
-    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.5);
-    margin: 20px;
+  
 }
 
 .sub-head {
