aumentar tamano de logo

--- a/estilo.css
+++ b/estilo.css
@@ -1,11 +1,10 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
 
-
 body {
-     margin: 0px;
+    margin: 0px;
 }
 
 
@@ -22,7 +21,7 @@ body {
 }
 
 .encabezado0 .hr {
-    width: 170px;
+    width: 290px;
     height: 90px;
     align-self: center;
     background: #0D1B2A;
@@ -31,13 +30,14 @@ body {
 }
 
 .encabezado0 .hr:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     background: #0D1B2A;
     box-shadow: 2px 2px 2px #0D1B2A;
 }
 
 .encabezado1 {
     width: 100%;
+    margin: 5px 65px;
     padding: 10px;
     background: #0D1B2A;
     display: flex;
@@ -46,7 +46,7 @@ body {
     align-items: flex-end;
 }
 
-.hr0 {
+.encabezado1 .hr0 {
     width: 150px;
     height: 40px;
     background: #0D1B2A;
@@ -56,23 +56,23 @@ body {
     text-align: center;
 }
 
-.hr1 i{
+.hr1 i {
     color: white;
     font-size: 50px;
     padding: 10px;
 }
 
-.hr1 i:hover{
-    color:#788daa;
+.hr1 i:hover {
+    color: #788daa;
 }
 
-.encabezado3 i{
-    color:white;
+.encabezado3 i {
+    color: white;
     font-size: 30px;
 }
 
-.encabezado3 i:hover{
-    color:#788daa;
+.encabezado3 i:hover {
+    color: #788daa;
 }
 
 .hr2 {
@@ -201,7 +201,7 @@ a i {
     margin: 10px;
 }
 
-img .shoe{
+img .shoe {
     margin-top: 0;
     margin-bottom: 20px;
 }
@@ -209,7 +209,6 @@ img .shoe{
 .description {
     text-align: justify;
     color: white;
-  
 }
 
 .sub-head {
